--- a/ItemBags/i18n/default.json
+++ b/ItemBags/i18n/default.json
@@ -2,91 +2,91 @@
   "DefaultBagName": "Default Bag",
   "DefaultBagDescription": "",
   "GemBagName": "Gem Bag",
-  "GemBagDescription": "A bag for storing valuable gems.",
+  "GemBagDescription": "กระเป๋าสำหรับเก็บอัญมณีล้ำค่า",
   "SmithingBagName": "Smithing Bag",
-  "SmithingBagDescription": "A bag for storing ores, bars, and geodes.",
+  "SmithingBagDescription": "กระเป๋าสำหรับเก็บ แร่(ores), บาร์(bars), และ จีออด(geodes)",
   "MineralBagName": "Mineral Bag",
-  "MineralBagDescription": "A bag for storing precious minerals.",
+  "MineralBagDescription": "กระเป๋าสำหรับเก็บแร่ธาตุล้ำค่า",
   "MiningBagName": "Mining Bag",
-  "MiningBagDescription": "A bag for storing ores, geodes, and gems.",
+  "MiningBagDescription": "กระเป๋าสำหรับเก็บ แร่(ores), จีออด(geodes), และ อัญมณี(gems)",
   "ResourceBagName": "Resource Bag",
-  "ResourceBagDescription": "A bag for storing resources.",
+  "ResourceBagDescription": "กระเป๋าสำหรับเก็บทรัพยากร",
   "ConstructionBagName": "Construction Bag",
-  "ConstructionBagDescription": "A bag for storing signs, fences, floors, paths,\nand construction resources.",
+  "ConstructionBagDescription": "กระเป๋าสำหรับเก็บป้าย, รั้ว, พื้น, ทางเดิน\nและทรัพยากรก่อสร้าง",
   "TreeBagName": "Tree Bag",
-  "TreeBagDescription": "A bag for storing tree seeds and products.",
+  "TreeBagDescription": "กระเป๋าสำหรับเก็บเมล็ดพันธุ์ไม้และผลิตภัณฑ์",
   "AnimalProductsBagName": "Animal Products Bag",
-  "AnimalProductsBagDescription": "A bag for storing animal products.",
+  "AnimalProductsBagDescription": "กระเป๋าสำหรับเก็บผลิตภัณฑ์จากสัตว์",
   "RecyclingBagName": "Recycling Bag",
-  "RecyclingBagDescription": "A bag for storing recyclables and trash.",
+  "RecyclingBagDescription": "กระเป๋าสำหรับเก็บขยะที่รีไซเคิลได้และขยะ",
   "LootBagName": "Loot Bag",
-  "LootBagDescription": "A bag for storing monster loot.",
+  "LootBagDescription": "กระเป๋าสำหรับเก็บของจากมอนสเตอร์",
   "ForagingBagName": "Foraging Bag",
-  "ForagingBagDescription": "A bag for storing foraged goods.",
+  "ForagingBagDescription": "กระเป๋าสำหรับเก็บอาหารสัตว์",
   "ArtifactBagName": "Artifact Bag",
-  "ArtifactBagDescription": "A bag for storing rare artifacts.",
+  "ArtifactBagDescription": "กระเป๋าสำหรับเก็บของป่า",
   "SeedBagName": "Seed Bag",
-  "SeedBagDescription": "A bag for storing seeds.",
+  "SeedBagDescription": "กระเป๋าสำหรับเก็บเมล็ดพืช",
   "FishBagName": "Fish Bag",
-  "FishBagDescription": "A bag for storing fish.",
+  "FishBagDescription": "กระเป๋าสำหรับเก็บปลา",
   "OceanFishBagName": "Ocean Fish Bag",
-  "OceanFishBagDescription": "A bag for storing ocean fish.",
+  "OceanFishBagDescription": "กระเป๋าสำหรับเก็บปลาทะเล",
   "RiverFishBagName": "River Fish Bag",
-  "RiverFishBagDescription": "A bag for storing river fish.",
+  "RiverFishBagDescription": "กระเป๋าสำหรับเก็บปลาแม่น้ำ",
   "LakeFishBagName": "Lake Fish Bag",
-  "LakeFishBagDescription": "A bag for storing lake fish.",
+  "LakeFishBagDescription": "กระเป๋าสำหรับเก็บปลาในทะเลสาบ",
   "MiscellaneousFishBagName": "Miscellaneous Fish Bag",
-  "MiscellaneousFishBagDescription": "A bag for storing miscellaneous fish.",
+  "MiscellaneousFishBagDescription": "กระเป๋าเก็บปลาต่างๆ",
   "FarmersBagName": "Farmer's Bag",
-  "FarmersBagDescription": "A bag for storing sprinklers, fertilizers, and scarecrows.",
+  "FarmersBagDescription": "กระเป๋าสำหรับเก็บสปริงเกอร์ปุ๋ยและหุ่นไล่กา",
   "FoodBagName": "Food Bag",
-  "FoodBagDescription": "A bag for storing cooked dishes and ingredients.",
+  "FoodBagDescription": "กระเป๋าสำหรับเก็บอาหารปรุงสุกและส่วนผสม",
   "CropBagName": "Crop Bag",
-  "CropBagDescription": "A bag for storing farmed fruits, vegetables, and flowers.",
+  "CropBagDescription": "กระเป๋าสำหรัมเก็บผลไม้, ผัก, และดอกไม้ในฟาร์ม",
 
   "BundleBagName": "Bundle Bag",
-  "BundleBagDescription": "A bag for storing items required by\nbundles in the Community Center.",
+  "BundleBagDescription": "กระเป๋าสำหรับเก็บไอเทมที่จำเป็นสำหรับ\nบันเบิ้นในศูนย์ชุมชน",
   "RucksackName": "Rucksack",
-  "RucksackDescription": "A bag capable of storing most standard items.",
+  "RucksackDescription": "กระเป๋าที่สามารถจัดเก็บไอเทมมาตรฐานส่วนใหญ่ได้",
   "OmniBagName": "Omni Bag",
-  "OmniBagDescription": "A bag for storing other bags.",
+  "OmniBagDescription": "กระเป๋าสำหรับเก็บกระเป๋าอื่นๆ",
 
-  "SizeSmallName": "Small",
-  "SizeMediumName": "Medium",
-  "SizeLargeName": "Large",
-  "SizeGiantName": "Giant",
-  "SizeMassiveName": "Massive",
+  "SizeSmallName": "เล็ก",
+  "SizeMediumName": "ปานกลาง",
+  "SizeLargeName": "ใหญ่",
+  "SizeGiantName": "ยักษ์",
+  "SizeMassiveName": "มโหฬาร",
 
-  "DepositAllToolTip": "Deposit all items from\ninventory into this bag",
-  "WithdrawAllToolTip": "Withdraw all items from\nthis bag into inventory",
-  "AutofillOnToolTip": "Toggle autofill (currently on)\nIf on, picked up items will automatically\nbe placed inside this bag",
-  "AutofillOffToolTip": "Toggle autofill (currently off)\nIf on, picked up items will automatically\nbe placed inside this bag",
-  "HelpInfoToolTip": "Right-click an item to transfer 1 (hold to repeat).\nHold Shift to transfer several.\nHold Ctrl to transfer half.",
-  "CustomizeIconToolTip": "Customize Bag icon",
-  "BundleTaskCompletedToolTip": "This bundle is complete!",
-  "BundleTaskIncompleteToolTip": "{{CompletedCount}}/{{TotalCount}} Items Completed\n{{ReadyToCompleteCount}}/{{TotalCount}} Items Ready to Complete\n{{RequiredCount}}/{{TotalCount}} Required",
+  "DepositAllToolTip": "นำไอเทมทั้งหมดจาก\nช่องเก็บของเข้ากระเป๋าใบนี้",
+  "WithdrawAllToolTip": "นำไอเทมทั้งหมดจาก\nกระเป๋าใบนี้ไปยังช่องเก็บของ",
+  "AutofillOnToolTip": "สลับการเติมอัตโนมัติ (เปิดอยู่ในขณะนี้)\nหากเปิดไว้ ไอเทมที่หยิบขึ้นมาจะ\nใส่ลงในกระเป๋าใบนี้โดยอัตโนมัติ",
+  "AutofillOffToolTip": "สลับการเติมอัตโนมัติ (ปิดอยู่ในขณะนี้)\nหากเปิดไว้ ไอเทมที่หยิบขึ้นมาจะ\nจะใส่ลงในกระเป๋าใบนี้โดยอัตโนมัติ",
+  "HelpInfoToolTip": "คลิกขวาที่ไอเทมที่จะใส่ 1 (กดค้างไว้เพื่อทำซ้ำ)\nกด Shift ค้างไว้เพื่อใส่หลายไอเทม\nกด Ctrl ค้างไว้เพื่อใส่ครึ่งหนึ่ง",
+  "CustomizeIconToolTip": "ปรับแต่งไอคอนกระเป๋า",
+  "BundleTaskCompletedToolTip": "บันเบิ้นนี้สำเร็จแล้ว",
+  "BundleTaskIncompleteToolTip": "{{CompletedCount}}/{{TotalCount}} ไอเทมที่เสร็จสมบูรณ์\n{{ReadyToCompleteCount}}/{{TotalCount}} ไอเทมที่พร้อมจะเสร็จสมบูรณ์\n{{RequiredCount}}/{{TotalCount}} จำเป็นต้องใช้",
 
-  "RucksackAutofillLowPriorityToolTip": "Toggle autofill (currently on - low priority)\nIf on, picked up items will automatically be placed inside this rucksack\nif there is already a stack of the item inside.\n\nCurrent priority - Low (This rucksack will be autofilled after regular bags)",
-  "RucksackAutofillHighPriorityToolTip": "Toggle autofill (currently on - high priority)\nIf on, picked up items will automatically be placed inside this rucksack\nif there is already a stack of the item inside.\n\nCurrent priority - High (This rucksack will be autofilled before regular bags)",
-  "RucksackAutofillOffToolTip": "Toggle autofill (currently off)\nIf on, picked up items will automatically be placed inside this rucksack\nif there is already a stack of the item inside",
+  "RucksackAutofillLowPriorityToolTip": "สลับการเติมอัตโนมัติ (ปัจจุบันเปิดอยู่ - ลําดับความสําคัญต่ํา)\nหากเปิดไว้ ไอเทมที่หยิบขึ้นมาจะถูกวางไว้ในกระเป๋าเป้นี้โดยอัตโนมัติ\nหากมีไอเทมอยู่ในกองซ้อนอยู่แล้ว.\n\nลำดับความสำคัญปัจจุบัน - ต่ำ (กระเป๋าเป้ใบนี้จะถูกเติมอัตโนมัติหลังจากกระเป๋าเป็นระเบียบ)",
+  "RucksackAutofillHighPriorityToolTip": "สลับการเติมอัตโนมัติ (ปัจจุบันเปิดอยู่ - ลําดับความสําคัญสูง)\nหากเปิดไว้ ไอเทมที่หยิบขึ้นมาจะถูกวางไว้ในกระเป๋าเป้นี้โดยอัตโนมัติ\nหากมีไอเทมอยู่ในกองซ้อนอยู่แล้ว.\n\nลำดับความสำคัญปัจจุบัน - สูง (กระเป๋าเป้ใบนี้จะถูกเติมอัตโนมัติก่อนที่กระเป๋าระเบียบ)",
+  "RucksackAutofillOffToolTip": "สลับการเติมอัตโนมัติ (ปิดอยู่ในขณะนี้)\nหากเปิดไว้ ไอเทมที่หยิบขึ้นมาจะถูกวางไว้ในกระเป๋าเป้นี้โดยอัตโนมัติ\nหากมีไอเทมอยู่ในกองซ้อนอยู่แล้ว",
 
-  "RucksackSortPropertyTimeToolTip": "Sorting Property - Time\n\nItems appear in the order that\nthey were added to this rucksack.",
-  "RucksackSortPropertyNameToolTip": "Sorting Property - Item Name",
-  "RucksackSortPropertyIdToolTip": "Sorting Property - Item Id",
-  "RucksackSortPropertyCategoryToolTip": "Sorting Property - Category Name",
-  "RucksackSortPropertyQuantityToolTip": "Sorting Property - Quantity",
-  "RucksackSortPropertySingleValueToolTip": "Sorting Property - Single Item Value",
-  "RucksackSortPropertyStackValueToolTip": "Sorting Property - Stack Value",
-  "RucksackSortPropertySimilarityToolTip": "Sorting Property - Similarity\n\nItems are first sorted and grouped by\nCategory name, then grouped by Item Id.\n.",
+  "RucksackSortPropertyTimeToolTip": "การจัดเรียงคุณสมบัติ - เวลา\n\nไอเทมปรากฏในลำดับที่\nเพิ่มลงในกระเป๋าสะพายใบนี้",
+  "RucksackSortPropertyNameToolTip": "การจัดเรียงคุณสมบัติ - ชื่อไอเทม",
+  "RucksackSortPropertyIdToolTip": "การจัดเรียงคุณสมบัติ - idไอเทม",
+  "RucksackSortPropertyCategoryToolTip": "การจัดเรียงคุณสมบัติ - ชื่อหมวดหมู่",
+  "RucksackSortPropertyQuantityToolTip": "การจัดเรียงคุณสมบัติ - จำนวน",
+  "RucksackSortPropertySingleValueToolTip": "การจัดเรียงคุณสมบัติ - ขนาดไอเทมเดียว",
+  "RucksackSortPropertyStackValueToolTip": "การจัดเรียงคุณสมบัติ - ขนาดกอง",
+  "RucksackSortPropertySimilarityToolTip": "การจัดเรียงคุณสมบัติ - ความเหมือน\n\nไอเทมแรกจะถูกจัดเรียงและจัดกลุ่มตาม\nชื่อหมวดหมู่ จากนั้นจึงจัดกลุ่มตาม idไอเทม",
 
-  "RucksackSortOrderAscendingToolTip": "Sorting Order - Ascending",
-  "RucksackSortOrderDescendingToolTip": "Sorting Order - Descending",
+  "RucksackSortOrderAscendingToolTip": "การเรียงลำดับ - จากน้อยไปมาก",
+  "RucksackSortOrderDescendingToolTip": "การเรียงลำดับ - จากมากไปน้อย",
 
-  "BagCategoryName": "Container",
-  "CapacityDescription": "holds up to {{count}} of each",
-  "OmniBagCapacityDescription": "Maximum bag size: {{size}}",
-  "LargeBundleBagUnstoreableRooms": "Bulletin Board, Abandoned Joja Mart",
-  "CustomizeIconInstructions": "Click a sprite to use as this bag's icon:",
-  "UseDefaultIconButtonText": "Default",
-  "CloseButtonText": "Close"
+  "BagCategoryName": "คอนเทนเนอร์",
+  "CapacityDescription": "จุได้ถึง {{count}} อัน",
+  "OmniBagCapacityDescription": "ขนาดกระเป๋าสูงสุด: {{size}}",
+  "LargeBundleBagUnstoreableRooms": "กระดานข่าว Joja Mart ที่ถูกทิ้งร้าง",
+  "CustomizeIconInstructions": "คลิกภูตเพื่อใช้เป็นไอคอนของกระเป๋าใบนี้:",
+  "UseDefaultIconButtonText": "ค่าเริ่มต้าน",
+  "CloseButtonText": "ปิด"
 }
