--- a/ItemBags thai 1.0.0/ItemBags/i18n/default.json
+++ b/ItemBags thai 1.0.0/ItemBags/i18n/default.json
@@ -1,5 +1,5 @@
 {
-  "DefaultBagName": "Default Bag",
+  "DefaultBagName": "55555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555g",
   "DefaultBagDescription": "",
   "GemBagName": "Gem Bag",
   "GemBagDescription": "กระเป๋าสำหรับเก็บอัญมณีล้ำค่า",
